[package]
name = "ievr_toolbox"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true        # Link Time Optimization
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
bitflags = "2"
clap = { version = "4.5", features = ["derive"] }
crossbeam = "0.8"
indicatif = { version = "0.18", features = ["rayon"] }
memmap2 = "0.9"
