[package]
name = "ievr_toolbox-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossbeam = "0.8"
indicatif = { version = "0.18", features = ["rayon"] }
sysinfo = "0.37.2"
ievr_cfg_bin_editor_core = { path = "../../ievr_cfg_bin_editor/ievr_cfg_bin_editor-core" }
regex = "1.12.2"
ievr_toolbox-core = { path = "../ievr_toolbox-core" }